--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,8 +1,8 @@
 #root {
-  max-width: 1280px;
+  /* max-width: 1280px; */
+  height: 100vh;
   width: 100%;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
@@ -12,4 +12,8 @@
 
 .read-the-docs {
   color: #888;
+}
+.App{
+  height: inherit;
+  width: inherit;
 }
