Add styling for uploaded image

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -20,3 +20,10 @@
 .logo{
   height: 44px;
 }
+.upload-img{
+  height: 50px;
+  width: 50px;
+  aspect-ratio: 1;
+  max-width: 150px;
+  max-height: 150px;
+}
