--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,7 +6,7 @@
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   /* background-color: #121212; */
-  background-color: #fff;
+  /* background-color: #fff; */
 
 
   font-synthesis: none;
